--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,7 @@
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
       <% if Current.user %>
       <li class="nav-item">
-      <%= Current.user.email %>
+      <%= link_to Current.user.email, change_password_path, class:"nav-link" %>
       </li>
       <li class="nav-item">
       <%= button_to "Logout", logout_path, method: :delete, class:"nav-link" %>
